inicio de cambio de comunidad segun el menú

--- a/AuxiliarHTML/horario.html
+++ b/AuxiliarHTML/horario.html
@@ -11,7 +11,7 @@
 <body>
     <article class="brillo">
         <section id="pantalla">
-            <nav class="menu">
+            <nav class="menu" id="menuAuxiliar">
                 <section class="logo">
                     <a href="/AuxiliarHTML/inicioo.html"></a><img src="/img/logo.png" alt="">
                 </section>
@@ -25,6 +25,9 @@
                     <li class="item"><a class="link" href="/AuxiliarHTML/ayuda.html">Ayuda</a></li>
                 </ul>
             </nav>
+            <div id="contenidoComunidad"></div>
+            <div id="contenidoEstudiante" style="display: none"></div>
+            <div id="contenidoAuxiliar" style="display: none"></div>
             <section class="caja1">
                 <article class="caja2">
                     <h1 class="let">Entrega de vaso de leche</h1>
