--- a/EstudinateHTML/inicioo.html
+++ b/EstudinateHTML/inicioo.html
@@ -12,7 +12,7 @@
     <article class="brillo">
         <section id="pantalla">
             <!-- Menú para estudiante-->
-            <nav class="men" id="menuAuxiliar">
+            <nav class="men" id="menuEstudiante" style="display: none">
                 <section class="log">
                 <a href="/EstudinateHTML/inicioo.html"><img src="/img/logo.png" alt=""></a>
                 </section>
@@ -25,6 +25,9 @@
                     <li class="item"><a class="link" href="/EstudinateHTML/ayuda.html">Ayuda</a></li>
                 </ul>
             </nav>
+            <div id="contenidoComunidad"></div>
+            <div id="contenidoEstudiante" style="display: none"></div>
+            <div id="contenidoAuxiliar" style="display: none"></div>
             <article class="frase">
                 <img src="/img/logo.png" title="logo">
                 <h3>School feeding program. <br>Tener un proceso ordenado es tener una alimentacion ordenada.</h3>
