--- a/EstudinateHTML/nosotros.html
+++ b/EstudinateHTML/nosotros.html
@@ -11,7 +11,7 @@
 <body>
     <article class="brillo">
         <section id="pantalla">
-            <nav class="men">
+            <nav class="men" id="menuEstudiante" style="display: none">
                 <section class="log">
                     <a href="/EstudinateHTML/inicioo.html"><img src="/img/logo.png" alt=""></a> 
                 </section>
@@ -24,6 +24,9 @@
                     <li class="item"><a class="link" href="/EstudinateHTML/ayuda.html">Ayuda</a></li>
                 </ul>
             </nav>
+            <div id="contenidoComunidad"></div>
+            <div id="contenidoEstudiante" style="display: none"></div>
+            <div id="contenidoAuxiliar" style="display: none"></div>
             <!-- dentro de esta caja empiece a programar lo otro -->
             <div class="container">
                 <div class="card">
@@ -123,7 +126,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail"><rect width="20" height="16" x="2" y="4" rx="2"></rect><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path></svg>
                     </button>
                     <div class="profile-pic">
-                        <img src="" alt="Avatar lopera">
+                        <img src="/img/lopera.webp" alt="Avatar lopera">
         
                     </div>
                     <div class="bottom">
