--- a/inicio.html
+++ b/inicio.html
@@ -39,7 +39,7 @@
                     <h2 class="title">Registrarse</h2>
                     <div class="input-field">
                         <i class="fa-solid fa-school"></i>
-                        <select name="select" class="select" id="select">
+                        <select name="select" class="select" id="select" onchange="cambiarContenido()">
                             <option value="#">Comunity</option>
                             <option value="Estudiante">Estudiante</option>
                             <option value="Auxiliar de Cocina">Auxiliar de Cocina</option>
