--- a/AuxiliarHTML/ayuda.html
+++ b/AuxiliarHTML/ayuda.html
@@ -11,7 +11,7 @@
 <body>
     <article class="brillo">
         <section id="pantalla">
-            <nav class="men">
+            <nav class="men" id="menuAuxiliar">
                 <section class="log">
                    <a href="/AuxiliarHTML/inicioo.html"><img src="/img/logo.png" alt=""></a> 
                 </section>
@@ -25,7 +25,9 @@
                     <li class="item"><a class="link" href="/AuxiliarHTML/ayuda.html">Ayuda</a></li>
                 </ul>
             </nav>
-            <!-- dentro de esta caja empiece a programar lo otro -->
+            <div id="contenidoComunidad"></div>
+            <div id="contenidoEstudiante" style="display: none"></div>
+            <div id="contenidoAuxiliar" style="display: none"></div>
             <section class="ayuda">
                 <h3 ">Sobre nosotros:</h3>
                 <p>Somos una pagina web donde apoyamos a la programación PAE  para que se más organizada, donde los usuarios puedan de estar informados y actualizados sobre los cambios nuevos que hayan en este programa.</p>
