--- a/AuxiliarHTML/verperfil.html
+++ b/AuxiliarHTML/verperfil.html
@@ -11,7 +11,7 @@
 <body>
     <article class="brillo">
         <section id="pantalla">
-            <nav class="men">
+            <nav class="men" id="menuAuxiliar">
                 <section class="log">
                    <a href="/AuxiliarHTML/inicioo.html"><img src="/img/logo.png" alt=""></a> 
                 </section>
@@ -25,6 +25,9 @@
                     <li class="item"><a class="link" href="/AuxiliarHTML/ayuda.html">Ayuda</a></li>
                 </ul>
             </nav>
+            <div id="contenidoComunidad"></div>
+            <div id="contenidoEstudiante" style="display: none"></div>
+            <div id="contenidoAuxiliar" style="display: none"></div>
             <article class="foto">
                 <img src="/img/foto.png" alt="">                    
             </article>
