se agrego la información de nosotros

--- a/AuxiliarHTML/verperfil.html
+++ b/AuxiliarHTML/verperfil.html
@@ -43,7 +43,7 @@
                     <p></p>
                 </div>
                 <button><a href="">Eliminar Cuenta</a></button>
-                <button><a href="inicio.html">Cerrar Sesión</a></button>
+                <button><a href="/inicio.html">Cerrar Sesión</a></button>
             </article>
         </section>
     </article>
