--- a/EstudianteHTML/inicioo.html
+++ b/EstudianteHTML/inicioo.html
@@ -11,38 +11,27 @@
 <body>
     <article class="brillo">
         <section id="pantalla">
-            <nav class="men" id="menuEstudiante" style="display: none">
+            <!-- Menú para Auxiliar de Cocina -->
+            <nav class="men" id="menuAuxiliar">
                 <section class="log">
-                   <a href="/EstudianteHTMl/inicioo.html"><img src="/img/logo.png" alt=""></a> 
+                <a href="/EstudianteHTMl/inicioo.html"><img src="/img/logo.png" alt=""></a>
                 </section>
                 <ul class="lista">
-                    <li class="item"><a class="link" href="/EstudianteHTMl/inicioo.html">Inicio</a></li>
-                    <li class="item"><a class="link" href="/EstudianteHTMl/horario.html">Horario</a></li>
-                    <li class="item"><a class="link" href="/EstudianteHTMl/menu.html">Menú</a></li>
-                    <li class="item"><a class="link" href="/EstudianteHTMl/nosotros.html">Nosotros</a></li>
-                    <li class="item"><a class="link" href="/EstudianteHTMl/verperfil.html">Ver tu perfil</a></li>
-                    <li class="item"><a class="link" href="/EstudianteHTMl/ayuda.html">Ayuda</a></li>
+                    <li class="item"><a class="link" href="/EstudinateHTML/inicioo.html">Inicio</a></li>
+                    <li class="item"><a class="link" href="/EstudinateHTML/horario.html">Horario</a></li>
+                    <li class="item"><a class="link" href="/EstudinateHTML/menu.html">Menú</a></li>
+                    <li class="item"><a class="link" href="/EstudinateHTML/nosotros.html">Nosotros</a></li>
+                    <li class="item"><a class="link" href="/EstudinateHTML/verperfil.html">Ver tu perfil</a></li>
+                    <li class="item"><a class="link" href="/EstudinateHTML/ayuda.html">Ayuda</a></li>
                 </ul>
             </nav>
-            <div id="contenidoComunidad"></div>
-            <div id="contenidoEstudiante" style="display: none"></div>
-            <div id="contenidoAuxiliar" style="display: none"></div>
-            <article class="foto">
-                <img src="/img/foto.png" alt="">                    
+            <article class="frase">
+                <img src="/img/logo.png" title="logo">
+                <h3>School feeding program. <br>Tener un proceso ordenado es tener una alimentacion ordenada.</h3>
             </article>
-            <article class="datos">
-                <div>            
-                    <p><b>NOMBRE:</b>  Juan camilo Sanchez</p><br>
-                    
-                </div>
-                <div>
-                    <p><b>CEDULA:</b>   1.034.129.291</p>
-                </div>
-                <div>
-                    <p></p>
-                </div>
-                <button><a href="">Eliminar Cuenta</a></button>
-                <button><a href="inicio.html">Cerrar Sesión</a></button>
+            <article class="video">
+                <h2>BIENVENIDOS</h2>
+                <video src="/video/Programa de Alimentación Escolar (PAE).mp4" autoplay loop controls></video>
             </article>
         </section>
     </article>
@@ -71,6 +60,7 @@
             </div>
         </section>
     </footer>
+    <script src="app.js"></script>
 </div>
 </body>
 </html>
