--- a/EstudianteHTML/inicioo.html
+++ b/EstudianteHTML/inicioo.html
@@ -12,17 +12,17 @@
     <article class="brillo">
         <section id="pantalla">
             <!-- Menú para Auxiliar de Cocina -->
-            <nav class="men" id="menuAuxiliar">
+            <nav class="men">
                 <section class="log">
                 <a href="/EstudianteHTMl/inicioo.html"><img src="/img/logo.png" alt=""></a>
                 </section>
                 <ul class="lista">
-                    <li class="item"><a class="link" href="/EstudinateHTML/inicioo.html">Inicio</a></li>
-                    <li class="item"><a class="link" href="/EstudinateHTML/horario.html">Horario</a></li>
-                    <li class="item"><a class="link" href="/EstudinateHTML/menu.html">Menú</a></li>
-                    <li class="item"><a class="link" href="/EstudinateHTML/nosotros.html">Nosotros</a></li>
-                    <li class="item"><a class="link" href="/EstudinateHTML/verperfil.html">Ver tu perfil</a></li>
-                    <li class="item"><a class="link" href="/EstudinateHTML/ayuda.html">Ayuda</a></li>
+                    <li class="item"><a class="link" href="/EstudianteHTML/inicioo.html">Inicio</a></li>
+                    <li class="item"><a class="link" href="/EstudianteHTML/horario.html">Horario</a></li>
+                    <li class="item"><a class="link" href="/EstudianteHTML/menu.html">Menú</a></li>
+                    <li class="item"><a class="link" href="/EstudianteHTML/nosotros.html">Nosotros</a></li>
+                    <li class="item"><a class="link" href="/EstudianteHTML/verperfil.html">Ver tu perfil</a></li>
+                    <li class="item"><a class="link" href="/EstudianteHTML/ayuda.html">Ayuda</a></li>
                 </ul>
             </nav>
             <article class="frase">
