--- a/EstudianteHTML/nosotros.html
+++ b/EstudianteHTML/nosotros.html
@@ -11,23 +11,19 @@
 <body>
     <article class="brillo">
         <section id="pantalla">
-            <nav class="men" id="menuEstudiante" style="display: none">
+            <nav class="men">
                 <section class="log">
-                    <a href="/EstudinateHTML/inicioo.html"><img src="/img/logo.png" alt=""></a> 
+                    <a href="/EstudianteHTML/inicioo.html"><img src="/img/logo.png" alt=""></a> 
                 </section>
                 <ul class="lista">
-                    <li class="item"><a class="link" href="/EstudinateHTML/inicioo.html">Inicio</a></li>
-                    <li class="item"><a class="link" href="/EstudinateHTML/horario.html">Horario</a></li>
-                    <li class="item"><a class="link" href="/EstudinateHTML/menu.html">Menú</a></li>
-                    <li class="item"><a class="link" href="/EstudinateHTML/nosotros.html">Nosotros</a></li>
-                    <li class="item"><a class="link" href="/EstudinateHTML/verperfil.html">Ver tu perfil</a></li>
-                    <li class="item"><a class="link" href="/EstudinateHTML/ayuda.html">Ayuda</a></li>
+                    <li class="item"><a class="link" href="/EstudianteHTML/inicioo.html">Inicio</a></li>
+                    <li class="item"><a class="link" href="/EstudianteHTML/horario.html">Horario</a></li>
+                    <li class="item"><a class="link" href="/EstudianteHTML/menu.html">Menú</a></li>
+                    <li class="item"><a class="link" href="/EstudianteHTML/nosotros.html">Nosotros</a></li>
+                    <li class="item"><a class="link" href="/EstudianteHTML/verperfil.html">Ver tu perfil</a></li>
+                    <li class="item"><a class="link" href="/EstudianteHTML/ayuda.html">Ayuda</a></li>
                 </ul>
             </nav>
-            <div id="contenidoComunidad"></div>
-            <div id="contenidoEstudiante" style="display: none"></div>
-            <div id="contenidoAuxiliar" style="display: none"></div>
-            <!-- dentro de esta caja empiece a programar lo otro -->
             <div class="container">
                 <div class="card">
                     <button class="mail">
