--- a/EstudianteHTML/ayuda.html
+++ b/EstudianteHTML/ayuda.html
@@ -11,7 +11,7 @@
 <body>
     <article class="brillo">
         <section id="pantalla">
-            <nav class="men" id="menuEstudiante" style="display: none">
+            <nav class="men">
                 <section class="log">
                    <a href="/EstudianteHTMl/inicioo.html"><img src="/img/logo.png" alt=""></a> 
                 </section>
@@ -24,10 +24,7 @@
                     <li class="item"><a class="link" href="/EstudianteHTMl/ayuda.html">Ayuda</a></li>
                 </ul>
             </nav>
-            <div id="contenidoComunidad"></div>
-            <div id="contenidoEstudiante" style="display: none"></div>
-            <div id="contenidoAuxiliar" style="display: none"></div>
-            <!-- dentro de esta caja empiece a programar lo otro -->
+
             <section class="ayuda">
                 <h3 ">Sobre nosotros:</h3>
                 <p>Somos una pagina web donde apoyamos a la programación PAE  para que se más organizada, donde los usuarios puedan de estar informados y actualizados sobre los cambios nuevos que hayan en este programa.</p>
