--- a/EstudianteHTML/horario.html
+++ b/EstudianteHTML/horario.html
@@ -11,7 +11,7 @@
 <body>
     <article class="brillo">
         <section id="pantalla">
-            <nav class="menu" id="menuEstudiante" style="display: none">
+            <nav class="menu">
                 <section class="logo">
                     <a href="/EstudianteHTMl/inicioo.html"></a><img src="/img/logo.png" alt="">
                 </section>
@@ -24,9 +24,6 @@
                     <li class="item"><a class="link" href="/EstudianteHTMl/ayuda.html">Ayuda</a></li>
                 </ul>
             </nav>
-            <div id="contenidoComunidad"></div>
-            <div id="contenidoEstudiante" style="display: none"></div>
-            <div id="contenidoAuxiliar" style="display: none"></div>
             <section class="caja1">
                 <article class="caja2">
                     <h1 class="let">Entrega de vaso de leche</h1>
