--- a/inicio.html
+++ b/inicio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,6 @@
     <link rel="icon" href="img/logo.png">
     <script src="https://kit.fontawesome.com/2c27531862.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <script src="app.js"></script>
 </head>
 <body>
     <div class="container">
@@ -15,75 +14,69 @@
             <div class="signin-signup">
                 <form action="" class="sign-in-form" id="login-form" onsubmit="return redirigirPagina()">
                     <h2 class="title">Iniciar Sesión</h2>
-                    <div class="input-field">
-                        <i class="fas fa-user"></i>
-                        <input type="text" placeholder="Username">
-                    </div>
-                    <div class="input-field">
-                        <i class="fa-solid fa-school"></i>
-                        <select name="select" class="select" id="select">
-                            <option value="#">Community</option>
-                            <option value="Estudiante">Estudiante</option>
-                            <option value="Auxiliar de Cocina">Auxiliar de Cocina</option>
-                        </select>
-                    </div>
-                    <div class="input-field">
-                        <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="Password">
-                    </div>
-                    <input type="submit" value="Login" class="btn solid" id="loginButton">
-                    <a href="olvidocontraseña.html" class="social-text">¿Olvidaste tu contraseña?</a>
+                        <div class="input-field">
+                            <i class="fas fa-user"></i>
+                            <input type="text" placeholder="Username" required>
+                        </div>
+                        <div class="input-field">
+                            <i class="fa-solid fa-school"></i>
+                            <select name="select" class="select" id="select">
+                                <option value="#">Comunity</option>
+                                <option value="Estudiante">Estudiante</option>
+                                <option value="Auxiliar de Cocina">Auxiliar de Cocina</option>
+                            </select>
+                        </div>
+                        <div class="input-field">
+                            <i class="fas fa-lock"></i>
+                            <input type="password" placeholder="Password" required>
+                        </div>
+                        <input type="submit" value="Login" class="btn solid">
+                        <a href="#" class="social-text"><b>Olvidaste tu contraseña?</b></a>
                 </form>
-                <!-- formulario de registrarse -->
-                <form action="#" class="sign-up-form">
+                <form action="" class="sign-up-form">
                     <h2 class="title">Registrarse</h2>
-                    <div class="input-field">
-                        <i class="fa-solid fa-school"></i>
-                        <select name="select" class="select" id="select">
-                            <option value="#">Community</option>
-                            <option value="Estudiante">Estudiante</option>
-                            <option value="Auxiliar de Cocina">Auxiliar de Cocina</option>
-                        </select>
-                    </div>
-                    <div class="input-field">
-                        <i class="fas fa-user"></i>
-                        <input type="text" placeholder="Nombre">
-                    </div>
-                    <div class="input-field">
-                        <i class="fa-regular fa-user"></i>
-                        <input type="text" placeholder="Apellido">
-                    </div>
-                    <div class="input-field">
-                        <i class="fas fa-envelope"></i>
-                        <input type="text" placeholder="Email">
-                    </div>
-                    <div class="input-field">
-                        <i class="fa-regular fa-address-book"></i>
-                        <input type="text" placeholder="Tarjeta Identidad">
-                    </div>
-                    <input type="submit" value="Crear" class="btn solid">
+                        <div class="input-field">
+                            <i class="fas fa-user"></i>
+                            <input type="text" placeholder="Nombre">
+                        </div>
+                        <div class="input-field">
+                            <i class="fa-regular fa-user"></i>
+                            <input type="text" placeholder="Apellido">
+                        </div>
+                        <div class="input-field">
+                            <i class="fas fa-envelope"></i>
+                            <input type="text" placeholder="Email">
+                        </div>
+                        <div class="input-field">
+                            <i class="fa-regular fa-address-book"></i>
+                            <input type="text" placeholder="Tarjeta Identidad">
+                        </div>
+                        <input type="submit" value="Crear" class="btn solid">
                 </form>
+
             </div>
         </div>
         <div class="panels-container">
             <div class="panel left-panel">
                 <div class="content">
-                    <h3>¿Eres nuevo?</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dignissimos cum quasi.</p>
-                    <button class="btn transparent" id="sign-up-btn">Regístrate</button>
+                    <h3>Eres nuevo?</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Magnam dignissimos cum quasi.</p>
+                    <button class="btn transparent" id="sign-up-btn">Iniciar sesion</button>
                 </div>
-                <img src="img/undraw_chef_cu-0-r (1).svg" class="image" alt="">
+                <img src="/img/undraw_chef_cu-0-r (1).svg" class="image" alt="">
             </div>
             <div class="panel right-panel">
                 <div class="content">
-                    <h3>¿Ya tienes cuenta?</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dignissimos cum quasi.</p>
-                    <button class="btn transparent" id="sign-in-btn">Iniciar Sesión</button>
+                    <h3>Ya tienes cuenta?</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Magnam dignissimos cum quasi.</p>
+                    <button class="btn transparent" id="sign-in-btn">Registrarse</button>
                 </div>
-                <img src="img/undraw_cooking_p7m1 (1).svg" class="image" alt="">
+                <img src="/img/undraw_cooking_p7m1 (1).svg" class="image" alt="" style="height: 300px; width:300px;">
             </div>
         </div>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
- 
